src/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CUSTOMER_NO__c</fullName>
        <displayFormat>C.NO-{0000}</displayFormat>
        <label>CUSTOMER NO.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Count_Of_Contacts__c</fullName>
        <label>Count Of Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Word Of Mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAME_OF_RECORD__c</fullName>
        <label>RECENT RECORD NAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SharingUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SharingUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOTAL_CASES__c</fullName>
        <label>TOTAL CASES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_CONTACT_RECORDS__c</fullName>
        <label>TOTAL CONTACT  RECORDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>high</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RATING</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.CP</value>
        </filters>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>CP</fullName>
        <active>true</active>
        <label>CP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACC_NO_in_format</fullName>
        <active>false</active>
        <errorConditionFormula>OR( ISBLANK( ( AccountNumber ) ),

                 NOT( BEGINS(AccountNumber , &apos;KVB&apos;) ),

             LEN(AccountNumber )  &lt;&gt; 10)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>SHOULD ENTER THE CORRECT FORMAT.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>expiry_date</fullName>
        <active>false</active>
        <errorConditionFormula>or (and (you_have_support_plan__c , 
              
            ISBLANK(  expiry_date__c)) , NOT(expiry_date__c  &gt;  TODAY() ))</errorConditionFormula>
        <errorMessage>please enter the date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>income_cannot_be_negative</fullName>
        <active>false</active>
        <errorConditionFormula>and( NOT( ISBLANK(income__c ) ) ,


      NOT( income__c  &gt; 0  &amp;&amp;  income__c &lt; 200000))</errorConditionFormula>
        <errorMessage>value must be between the 0 to 200000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>income_rule</fullName>
        <active>false</active>
        <errorConditionFormula>income__c  &lt; 200000</errorConditionFormula>
        <errorMessage>p;lease give more value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>name_ram_stu</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL( name_stu__c ,&apos;ramesh&apos;) , 
              ISNULL( income__c ),false )  || 
IF( ISPICKVAL( name_stu__c ,&apos;ganesh&apos;) , 
              ISNULL( income__c ),false ) || 
IF( ISPICKVAL( name_stu__c ,&apos;suresh&apos;) , 
              ISNULL( income__c ),false )</errorConditionFormula>
        <errorMessage>please must enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone_no</fullName>
        <active>false</active>
        <errorConditionFormula>or (  ISBLANK( Phone ) ,
                     
                  LEN( Phone )  &lt;&gt; 10,

                       NOT(ISNUMBER(Phone)  ) 
                      
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>should enter the phone value</errorMessage>
    </validationRules>
</CustomObject>